battle.output
Terminals which are not used

   GRIDLITERAL
   GRIDTYPE
   '+'
   '-'
   '*'
   '/'


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input line

    3 line: IDENTIFIER ASSIGNOP expr
    4     | typedecl IDENTIFIER
    5     | IDENTIFIER ACTIONSYMBOL action
    6     | BEGINLOOP STATEMENTNUMSYMBOLSTART
    7     | ENDLOOP
    8     | BEGINIFCOND boolcond STATEMENTNUMSYMBOLSTART
    9     | ENDIFCOND
   10     | BEGINELSE STATEMENTNUMSYMBOLSTART
   11     | ENDELSE
   12     | BEGINTRYSTATEMENT STATEMENTNUMSYMBOLSTART
   13     | ENDTRYSTATEMENT
   14     | INTLITERAL STATEMENTNUMSYMBOL TRYSTATEMENT STATEMENTNUMSYMBOLSTART line
   15     | WHENSTATEMENT

   16 boolcond: IDENTIFIER ACTIONSYMBOL FINDSBOAT

   17 action: ADDBOATACTION
   18       | ATTACKBOATACTION ACTIONSYMBOL IDENTIFIER
   19       | SEEKACTION ACTIONSYMBOL IDENTIFIER
   20       | SHOWVARACTION
   21       | RANDOMADDBOATACTION
   22       | TRYSINKACTION ACTIONSYMBOL IDENTIFIER

   23 expr: INTLITERAL
   24     | CHARLITERAL
   25     | STRINGLITERAL
   26     | PLAYERLITERAL
   27     | COMPUTERLITERAL
   28     | IDENTIFIER

   29 typedecl: INTTYPE
   30         | CHARTYPE
   31         | STRINGTYPE
   32         | PLAYERTYPE
   33         | COMPUTERTYPE


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
error (256)
STATEMENTNUMSYMBOL (258) 14
STATEMENTNUMSYMBOLSTART (259) 6 8 10 12 14
BEGINLOOP (260) 6
ENDLOOP (261) 7
ACTIONSYMBOL (262) 5 16 18 19 22
TRYSINKACTION (263) 22
SHOWVARACTION (264) 20
ADDBOATACTION (265) 17
ATTACKBOATACTION (266) 18
RANDOMADDBOATACTION (267) 21
SEEKACTION (268) 19
BEGINIFCOND (269) 8
ENDIFCOND (270) 9
FINDSBOAT (271) 16
BEGINELSE (272) 10
ENDELSE (273) 11
WHENSTATEMENT (274) 15
TRYSTATEMENT (275) 14
BEGINTRYSTATEMENT (276) 12
ENDTRYSTATEMENT (277) 13
COMPUTERLITERAL (278) 27
PLAYERLITERAL (279) 26
GRIDLITERAL (280)
STRINGLITERAL (281) 25
CHARLITERAL (282) 24
INTLITERAL (283) 14 23
IDENTIFIER (284) 3 4 5 16 18 19 22 28
INTTYPE (285) 29
CHARTYPE (286) 30
STRINGTYPE (287) 31
GRIDTYPE (288)
PLAYERTYPE (289) 32
COMPUTERTYPE (290) 33
ASSIGNOP (291) 3


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
input (42)
    on left: 1 2, on right: 0 2
line (43)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 14
boolcond (44)
    on left: 16, on right: 8
action (45)
    on left: 17 18 19 20 21 22, on right: 5
expr (46)
    on left: 23 24 25 26 27 28, on right: 3
typedecl (47)
    on left: 29 30 31 32 33, on right: 4


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . line

    $end               shift, and go to state 2
    BEGINLOOP          shift, and go to state 3
    ENDLOOP            shift, and go to state 4
    BEGINIFCOND        shift, and go to state 5
    ENDIFCOND          shift, and go to state 6
    BEGINELSE          shift, and go to state 7
    ENDELSE            shift, and go to state 8
    WHENSTATEMENT      shift, and go to state 9
    BEGINTRYSTATEMENT  shift, and go to state 10
    ENDTRYSTATEMENT    shift, and go to state 11
    INTLITERAL         shift, and go to state 12
    IDENTIFIER         shift, and go to state 13
    INTTYPE            shift, and go to state 14
    CHARTYPE           shift, and go to state 15
    STRINGTYPE         shift, and go to state 16
    PLAYERTYPE         shift, and go to state 17
    COMPUTERTYPE       shift, and go to state 18

    line      go to state 19
    typedecl  go to state 20


state 2

    0 $accept: input $end .

    $default  accept


state 3

    6 line: BEGINLOOP . STATEMENTNUMSYMBOLSTART

    STATEMENTNUMSYMBOLSTART  shift, and go to state 21


state 4

    7 line: ENDLOOP .

    $default  reduce using rule 7 (line)


state 5

    8 line: BEGINIFCOND . boolcond STATEMENTNUMSYMBOLSTART

    IDENTIFIER  shift, and go to state 22

    boolcond  go to state 23


state 6

    9 line: ENDIFCOND .

    $default  reduce using rule 9 (line)


state 7

   10 line: BEGINELSE . STATEMENTNUMSYMBOLSTART

    STATEMENTNUMSYMBOLSTART  shift, and go to state 24


state 8

   11 line: ENDELSE .

    $default  reduce using rule 11 (line)


state 9

   15 line: WHENSTATEMENT .

    $default  reduce using rule 15 (line)


state 10

   12 line: BEGINTRYSTATEMENT . STATEMENTNUMSYMBOLSTART

    STATEMENTNUMSYMBOLSTART  shift, and go to state 25


state 11

   13 line: ENDTRYSTATEMENT .

    $default  reduce using rule 13 (line)


state 12

   14 line: INTLITERAL . STATEMENTNUMSYMBOL TRYSTATEMENT STATEMENTNUMSYMBOLSTART line

    STATEMENTNUMSYMBOL  shift, and go to state 26


state 13

    3 line: IDENTIFIER . ASSIGNOP expr
    5     | IDENTIFIER . ACTIONSYMBOL action

    ACTIONSYMBOL  shift, and go to state 27
    ASSIGNOP      shift, and go to state 28


state 14

   29 typedecl: INTTYPE .

    $default  reduce using rule 29 (typedecl)


state 15

   30 typedecl: CHARTYPE .

    $default  reduce using rule 30 (typedecl)


state 16

   31 typedecl: STRINGTYPE .

    $default  reduce using rule 31 (typedecl)


state 17

   32 typedecl: PLAYERTYPE .

    $default  reduce using rule 32 (typedecl)


state 18

   33 typedecl: COMPUTERTYPE .

    $default  reduce using rule 33 (typedecl)


state 19

    2 input: input line .

    $default  reduce using rule 2 (input)


state 20

    4 line: typedecl . IDENTIFIER

    IDENTIFIER  shift, and go to state 29


state 21

    6 line: BEGINLOOP STATEMENTNUMSYMBOLSTART .

    $default  reduce using rule 6 (line)


state 22

   16 boolcond: IDENTIFIER . ACTIONSYMBOL FINDSBOAT

    ACTIONSYMBOL  shift, and go to state 30


state 23

    8 line: BEGINIFCOND boolcond . STATEMENTNUMSYMBOLSTART

    STATEMENTNUMSYMBOLSTART  shift, and go to state 31


state 24

   10 line: BEGINELSE STATEMENTNUMSYMBOLSTART .

    $default  reduce using rule 10 (line)


state 25

   12 line: BEGINTRYSTATEMENT STATEMENTNUMSYMBOLSTART .

    $default  reduce using rule 12 (line)


state 26

   14 line: INTLITERAL STATEMENTNUMSYMBOL . TRYSTATEMENT STATEMENTNUMSYMBOLSTART line

    TRYSTATEMENT  shift, and go to state 32


state 27

    5 line: IDENTIFIER ACTIONSYMBOL . action

    TRYSINKACTION        shift, and go to state 33
    SHOWVARACTION        shift, and go to state 34
    ADDBOATACTION        shift, and go to state 35
    ATTACKBOATACTION     shift, and go to state 36
    RANDOMADDBOATACTION  shift, and go to state 37
    SEEKACTION           shift, and go to state 38

    action  go to state 39


state 28

    3 line: IDENTIFIER ASSIGNOP . expr

    COMPUTERLITERAL  shift, and go to state 40
    PLAYERLITERAL    shift, and go to state 41
    STRINGLITERAL    shift, and go to state 42
    CHARLITERAL      shift, and go to state 43
    INTLITERAL       shift, and go to state 44
    IDENTIFIER       shift, and go to state 45

    expr  go to state 46


state 29

    4 line: typedecl IDENTIFIER .

    $default  reduce using rule 4 (line)


state 30

   16 boolcond: IDENTIFIER ACTIONSYMBOL . FINDSBOAT

    FINDSBOAT  shift, and go to state 47


state 31

    8 line: BEGINIFCOND boolcond STATEMENTNUMSYMBOLSTART .

    $default  reduce using rule 8 (line)


state 32

   14 line: INTLITERAL STATEMENTNUMSYMBOL TRYSTATEMENT . STATEMENTNUMSYMBOLSTART line

    STATEMENTNUMSYMBOLSTART  shift, and go to state 48


state 33

   22 action: TRYSINKACTION . ACTIONSYMBOL IDENTIFIER

    ACTIONSYMBOL  shift, and go to state 49


state 34

   20 action: SHOWVARACTION .

    $default  reduce using rule 20 (action)


state 35

   17 action: ADDBOATACTION .

    $default  reduce using rule 17 (action)


state 36

   18 action: ATTACKBOATACTION . ACTIONSYMBOL IDENTIFIER

    ACTIONSYMBOL  shift, and go to state 50


state 37

   21 action: RANDOMADDBOATACTION .

    $default  reduce using rule 21 (action)


state 38

   19 action: SEEKACTION . ACTIONSYMBOL IDENTIFIER

    ACTIONSYMBOL  shift, and go to state 51


state 39

    5 line: IDENTIFIER ACTIONSYMBOL action .

    $default  reduce using rule 5 (line)


state 40

   27 expr: COMPUTERLITERAL .

    $default  reduce using rule 27 (expr)


state 41

   26 expr: PLAYERLITERAL .

    $default  reduce using rule 26 (expr)


state 42

   25 expr: STRINGLITERAL .

    $default  reduce using rule 25 (expr)


state 43

   24 expr: CHARLITERAL .

    $default  reduce using rule 24 (expr)


state 44

   23 expr: INTLITERAL .

    $default  reduce using rule 23 (expr)


state 45

   28 expr: IDENTIFIER .

    $default  reduce using rule 28 (expr)


state 46

    3 line: IDENTIFIER ASSIGNOP expr .

    $default  reduce using rule 3 (line)


state 47

   16 boolcond: IDENTIFIER ACTIONSYMBOL FINDSBOAT .

    $default  reduce using rule 16 (boolcond)


state 48

   14 line: INTLITERAL STATEMENTNUMSYMBOL TRYSTATEMENT STATEMENTNUMSYMBOLSTART . line

    BEGINLOOP          shift, and go to state 3
    ENDLOOP            shift, and go to state 4
    BEGINIFCOND        shift, and go to state 5
    ENDIFCOND          shift, and go to state 6
    BEGINELSE          shift, and go to state 7
    ENDELSE            shift, and go to state 8
    WHENSTATEMENT      shift, and go to state 9
    BEGINTRYSTATEMENT  shift, and go to state 10
    ENDTRYSTATEMENT    shift, and go to state 11
    INTLITERAL         shift, and go to state 12
    IDENTIFIER         shift, and go to state 13
    INTTYPE            shift, and go to state 14
    CHARTYPE           shift, and go to state 15
    STRINGTYPE         shift, and go to state 16
    PLAYERTYPE         shift, and go to state 17
    COMPUTERTYPE       shift, and go to state 18

    line      go to state 52
    typedecl  go to state 20


state 49

   22 action: TRYSINKACTION ACTIONSYMBOL . IDENTIFIER

    IDENTIFIER  shift, and go to state 53


state 50

   18 action: ATTACKBOATACTION ACTIONSYMBOL . IDENTIFIER

    IDENTIFIER  shift, and go to state 54


state 51

   19 action: SEEKACTION ACTIONSYMBOL . IDENTIFIER

    IDENTIFIER  shift, and go to state 55


state 52

   14 line: INTLITERAL STATEMENTNUMSYMBOL TRYSTATEMENT STATEMENTNUMSYMBOLSTART line .

    $default  reduce using rule 14 (line)


state 53

   22 action: TRYSINKACTION ACTIONSYMBOL IDENTIFIER .

    $default  reduce using rule 22 (action)


state 54

   18 action: ATTACKBOATACTION ACTIONSYMBOL IDENTIFIER .

    $default  reduce using rule 18 (action)


state 55

   19 action: SEEKACTION ACTIONSYMBOL IDENTIFIER .

    $default  reduce using rule 19 (action)
